--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       </p>
     </form>
     <!-- Image of location/map -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95398.04279802587!2d-0.9773817034633446!3d41.651661825622725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5914dd5e618e91%3A0x49df13f1158489a8!2sZaragoza!5e0!3m2!1ses!2ses!4v1716325282804!5m2!1ses!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95398.04279802587!2d-0.9773817034633446!3d41.651661825622725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5914dd5e618e91%3A0x49df13f1158489a8!2sZaragoza!5e0!3m2!1ses!2ses!4v1716325282804!5m2!1ses!2ses" class="map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 </div>
 
