Changed a few things

--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
   <h1 class="w3-center">CONTACTO</h1>
   <p class="w3-center w3-large">Trabajemos juntos, escribenos un mensaje:</p>
   <div style="margin-top:48px">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right" style="color: #426CC2"></i> Zaragoza, España</p>
-    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right" style="color: #426CC2"></i> Telefono: +34 123456789</p>
+    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right" style="color: #426CC2"></i> Calle 81 Nº 32-11 | Piso 2<br><div style="margin-top: -25px;"><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right" style="color: #0000"></i> Zaragoza, España</div></p>
+    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right" style="color: #426CC2"></i> Telefono: +34 111 111 111</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right" style="color: #426CC2"> </i> Email: contacto@cybersentinel.com</p>
     <br>
     <form action="/action_page.php" target="_blank">
@@ -324,6 +324,8 @@
         </button>
       </p>
     </form>
+    <br>
+    <br>
     <!-- Image of location/map -->
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95398.04279802587!2d-0.9773817034633446!3d41.651661825622725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd5914dd5e618e91%3A0x49df13f1158489a8!2sZaragoza!5e0!3m2!1ses!2ses!4v1716325282804!5m2!1ses!2ses" class="map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
@@ -340,6 +342,7 @@
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
+  <h2 style="color: #6093C2;"><b>CYSEN Consulting</b></h2>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
 
