--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
 <div class="w3-container" style="padding:50px 16px" id="team">
   <h1 class="w3-center">NUESTRO EQUIPO</h1>
   <p class="w3-center w3-large">Quienes hacemos posible esta empresa</p>
-  <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
+  <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="./images/oscar.png" alt="Jose" style="width:100%">
+        <img src="./images/Jose.jpg" alt="Jose" style="width:100%">
         <div class="w3-container">
           <h3>Jose Vladimir Gómez</h3>
           <p class="w3-opacity">CEO (Chief Executive Officer) y fundador</p>
           <p>Graduado en ingenieria informatica + Master en administracion de empresas.</p>
-          <p><button class="w3-button w3-blue w3-block"><i class="fa fa-envelope"></i> linkedin</button></p>
+          <p><button class="w3-button w3-blue w3-block w3-grayscale"><i class="fa fa-envelope"></i> linkedin</button></p>
         </div>
       </div>
     </div>
@@ -125,7 +125,7 @@
           <h3>Lorena San Andrés</h3>
           <p class="w3-opacity">CTO (Chief Technology Officer) y fundadora</p>
           <p>Graduada en ingenieria informatica y doctora en redes de computación.</p>
-          <p><button class="w3-button w3-blue w3-block"><i class="fa fa-envelope"></i> Linkedin</button></p>
+          <p><button class="w3-button w3-blue w3-block w3-grayscale"><i class="fa fa-envelope"></i> Linkedin</button></p>
         </div>
       </div>
     </div>
@@ -136,7 +136,7 @@
           <h3>Darío Sarasa</h3>
           <p class="w3-opacity">CFO (Chief Financial Officer) y fundador</p>
           <p>Graduado en finanzas y contabilidad + Master en banca y finanzas.</p>
-          <p><button class="w3-button w3-blue w3-block"><i class="fa fa-envelope"></i> Linkedin</button></p>
+          <p><button class="w3-button w3-blue w3-block w3-grayscale"><i class="fa fa-envelope"></i> Linkedin</button></p>
         </div>
       </div>
     </div>
@@ -147,7 +147,7 @@
           <h3>Sergio Benito</h3>
           <p class="w3-opacity">CISO (Chief Information Security Officer) y fundador</p>
           <p>Graduado en ingenieria informatica + Doctorado en ciberseguridad y hacking ético</p>
-          <p><button class="w3-button w3-blue w3-block"><i class="fa fa-envelope"></i> Linkedin</button></p>
+            <p><button class="w3-button w3-blue w3-block w3-grayscale"><i class="fa fa-envelope"></i> Linkedin</button></p>
         </div>
       </div>
     </div>
@@ -309,7 +309,7 @@
   <h1 class="w3-center">CONTACTO</h1>
   <p class="w3-center w3-large">Trabajemos juntos, escribenos un mensaje:</p>
   <div style="margin-top:48px">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right" style="color: #426CC2"></i> Calle 81 Nº 32-11 | Piso 2<br><div style="margin-top: -25px;"><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right" style="color: #0000"></i> Zaragoza, España</div></p>
+    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right" style="color: #426CC2"></i> C/Champiñón nº7, 50021<br><div style="margin-top: -25px;"><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right" style="color: #0000"></i> Zaragoza, España</div></p>
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right" style="color: #426CC2"></i> Telefono: +34 111 111 111</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right" style="color: #426CC2"> </i> Email: contacto@cybersentinel.com</p>
     <br>
